<resources>
    <string name="app_name">Scope</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notification</string>
    <string name="dictionary">Dictionnaire</string>
    <string name="userPosition">Position actuelle</string>
    <string name="positionXLabel">Position X :</string>
    <string name="positionYLabel">Position Y :</string>
    <string name="positionZLabel">Position Z :</string>
    <string name="positionX"></string>
    <string name="positionY"></string>
    <string name="positionZ"></string>
    <string name="stopTrackingBtn">Stop tracking</string>


    <string-array name="planets">
        <item>Mercury</item>
        <item>Venus</item>
        <item>ISS</item>
        <item>Moon</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

</resources>